fixed TeacherHome squish

--- a/lab08/src/teacher_pages/TeacherHome.css
+++ b/lab08/src/teacher_pages/TeacherHome.css
@@ -13,6 +13,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
+    background-color: #f2f2f2;
+    border-bottom: 1px solid #ccc;
 }
 
 .outerHeader .left {
